# ChangeLog for sys-cluster/wulfware
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/wulfware/ChangeLog,v 1.1 2008/05/22 14:40:51 drac Exp $

*wulfware-2.6.0 (22 May 2008)

  22 May 2008; Samuli Suominen <drac@gentoo.org>
  +files/wulfware-2.6.0-opts_and_strip.patch, +wulfware-2.6.0.ebuild:
  Initial commit by treecleaners wrt #193635, replacing separate ebuilds for
  sys-cluster/xmlsysd and sys-cluster/wulfstat. Attached patch is to respect
  users CFLAGS and LDFLAGS, building with -Wl,--as-needed and to stop
  pre-stripping.
