@@ -1,5 +1,5 @@
 AUX wulfware-2.6.0-opts_and_strip.patch 5085 RMD160 03e38bb95603748b8d1987611e481d1ac40f3684 SHA1 65b78c4072b018077145aed0bcec70f85ec9c802 SHA256 59b1ddb5492c7e4f0475b36dd37a9138dd43bd5ae231685ee04db82c4dad7600
 DIST wulfware-2.6.0.tgz 469000 RMD160 014ac41d22643ece0f75481b120121701679c52f SHA1 7d4f130b0877f5680feac11cc4b5aa3e183b1fb5 SHA256 b89fe5bd46a687811ac682a59b63d0fac9e9b4218eaa1d6ffbae56590b71cc9c
-EBUILD wulfware-2.6.0.ebuild 1573 RMD160 89c4e2b1ecd6e55f8f69bedf78fc29b3a367e071 SHA1 59b3707636f8e18279e757196d65a03982c2a284 SHA256 de737e5983b92e1242d6f9f02865fbbd634b12a2fea5470fb12017363ac0f61b
-MISC ChangeLog 603 RMD160 c821cafaf22608b69eda4aeaae1e969de3f3a165 SHA1 17e8ac48a672c61fd767e31aca6c4af28f8fb24d SHA256 70d9c3894a6dd1e1fab3c8cd58640f99cbc8c793d5f473104efd3bd673eb4a84
+EBUILD wulfware-2.6.0.ebuild 1425 RMD160 51b8e496633db30896556ee1047a7b32d23bfe18 SHA1 b9606af54c348608e454342af0684ad849fc0579 SHA256 f85e1d8935ddb5bb789c7668fc8330a1078ef506c6939ef9bad208c13a287440
+MISC ChangeLog 724 RMD160 60856316692e80ac18673a7784c460fd74f2af65 SHA1 e36b8b53e3d62aded8bef4daa18e2a1b40057fae SHA256 a2c8c35f80d1ec0c62e2015c7bda3e124d0c96a3e0af1dd1dc9f644c4f19832c
 MISC metadata.xml 290 RMD160 b9b86283c09349c8827faef7d3ef5f724a248e77 SHA1 ae1c8e62d75c94ff50b8a5391afb6008460963aa SHA256 380e26e9262298b9cb31e863a9ab641f6fbdc8c50bda2cf2e47fd399f9cb5e85
