@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/wulfware
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/wulfware/ChangeLog,v 1.1 2008/05/22 14:40:51 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/wulfware/ChangeLog,v 1.2 2008/05/23 08:41:22 drac Exp $
+
+  23 May 2008; Samuli Suominen <drac@gentoo.org> wulfware-2.6.0.ebuild:
+  Remove pkg_config which alters /etc/services.
 
 *wulfware-2.6.0 (22 May 2008)
 
